--- a/reports/report_contract_template.xml
+++ b/reports/report_contract_template.xml
@@ -200,9 +200,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -505,9 +505,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -810,9 +810,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -1115,9 +1115,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
