--- a/reports/report_contract_template_es.xml
+++ b/reports/report_contract_template_es.xml
@@ -197,9 +197,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -578,9 +578,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -960,9 +960,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -1342,9 +1342,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
@@ -1724,9 +1724,9 @@
                             </div>
                             <div class="mt-3 text-justify">
                                 TAMANIQUE, 
-                                <t t-esc="doc.start_date.day"/> de 
-                                <t t-esc="months[str(doc.start_date.month)]"/> de 
-                                <t t-esc="doc.start_date.year"/> 
+                                <t t-esc="doc.date_order.day"/> de 
+                                <t t-esc="months[str(doc.date_order.month)]"/> de 
+                                <t t-esc="doc.date_order.year"/> 
                                 PAGARE(mos) sin protesto en forma incondicional a la orden de REDES LITORALES S.A. DE C.V., en sus oficinas, 
                                 el día _______ de _________ del año _________ la cantidad de 
                                 <span class="font-weight-bold">
