--- a/views/contract_transfer_wizard_action.xml
+++ b/views/contract_transfer_wizard_action.xml
@@ -1,22 +1,13 @@
 <odoo>
     <data noupdate="1">
-        <!-- Define the server action -->
-        <record id="action_subscription_transfer_wizard" model="ir.actions.server">
+        <record id="action_subscription_transfer_wizard" model="ir.actions.act_window">
             <field name="name">Subscription Transfer Wizard</field>
-            <field name="model_id" ref="model_subscription_transfer_wizard"/>
+            <field name="res_model">subscription.transfer.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
             <field name="binding_model_id" ref="model_sale_order"/>
-            <field name="state">code</field>
-            <field name="code">
-                action = {
-                    'type': 'ir.actions.act_window',
-                    'res_model': 'subscription.transfer.wizard',
-                    'view_mode': 'form',
-                    'target': 'new',
-                    'context': {
-                        'default_from_subscription_id': record and record.id or False,
-                    },
-                }
-            </field>
+            <field name="binding_type">action</field>
+            <field name="context">{'default_from_subscription_id': context.get('default_from_subscription_id') or context.get('active_id') or (context.get('active_ids') and context['active_ids'][0])}</field>
         </record>
     </data>
 </odoo>
